Lib updates, cleanups